# ZQt6WebView

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  main.cpp  qml.qrc  webMain.qml  zQt6WebView.qrc
html/: candlestick-sh.html  echarts.min.js  home.html  line-simple.html
htmlServer/: ZHttpServer.cpp  ZHttpServer.h
