cmake_minimum_required(VERSION 3.26)

project(ZQt6WebView VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Quick WebView)

qt_standard_project_setup(REQUIRES 6.8)

qt_add_executable(appZQt6WebView
    main.cpp
)

qt_add_qml_module(appZQt6WebView
    URI ZQt6WebView
    QML_FILES
        Main.qml
        RESOURCES zQt6WebView.qrc
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(appZQt6WebView PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appZQt6WebView
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(appZQt6WebView
    PRIVATE Qt6::Quick PRIVATE Qt6::WebView
)

include(GNUInstallDirs)
install(TARGETS appZQt6WebView
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
